force-app/main/default/objects/Contact/fields/First_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Election_Date__c</fullName>
    <label>First Election Date</label>
    <type>Date</type>
</CustomField>