force-app/main/default/objects/Contact/fields/Freshman_Legislator__c.field-meta.xml
<CustomField>
    <fullName>Freshman_Legislator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freshman Legislator</label>
    <type>Checkbox</type>
</CustomField>