force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>FirstName + &apos; &apos; + LastName + &apos; &apos; + Suffix</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>