force-app/main/default/objects/Contact/fields/Party_State_Tag__c.field-meta.xml
<CustomField>
    <fullName>Party_State_Tag__c</fullName>
    <label>Party State Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>