force-app/main/default/objects/Contact/fields/Re_ElectionYear__c.field-meta.xml
<CustomField>
    <fullName>Re_ElectionYear__c</fullName>
    <label>Re-Election Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>