force-app/main/default/objects/Contact/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <label>Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>