force-app/main/default/objects/Contact/recordTypes/Private_Citizen.recordType-meta.xml
<RecordType>
    <fullName>Private_Citizen</fullName>
    <active>true</active>
    <label>Private Citizen</label>
</RecordType>