force-app/main/default/objects/Contact/recordTypes/Public_Figure.recordType-meta.xml
<RecordType>
    <fullName>Public_Figure</fullName>
    <active>true</active>
    <label>Public Figure</label>
</RecordType>